Added event time, that is visible only if the width of the day cell is > 140px
Also added fullscreen demo page to demostrate responsiveness
(http://127.0.0.1:8081/components/calendar-component/demo/fullscreen-demo.html)

--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "vaadin-button": "vaadin/vaadin-button#^2.1.0",
     "vaadin-icons": "vaadin/vaadin-icons#^4.2.0",
     "vaadin-text-field": "vaadin/vaadin-text-field#^2.1.2",
+    "iron-resizable-behavior": "^2.1.1",
     "iron-icon": "^2.0.1"
   },
   "devDependencies": {
